@@ -1,7 +1,9 @@
 2005-03-21  Matthias Clasen  <mclasen@redhat.com>
 
-	* glib/gmem.h: Add g_try_new, g_try_new0 and 
-	g_try_renew.  (#169611, Stefan Kost)
+	* glib/gmem.h: Add g_try_new, g_try_new0, g_try_renew and
+	g_try_malloc0.  (#169611, Stefan Kost)
+
+	* glib/gmem.c: Implement g_try_malloc0.
 
 2005-03-20  Tor Lillqvist  <tml@novell.com>
 
